--- a/src/styles.css
+++ b/src/styles.css
@@ -1,36 +1,71 @@
+*,
+*::before,
+*::after {
+	box-sizing: border-box;
+}
+
+html {
+	scroll-behavior: smooth;
+}
+
 body {
-	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+	font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+		Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+	line-height: 1.5;
+	color: #2a2a2a;
 }
 
-.errorStyle {
+img {
+	display: block;
+	max-width: 100%;
+	height: auto;
+}
+
+.search-form {
 	display: flex;
-	justify-content: flex-end;
+	justify-content: center;
+	padding: 8px;
+	margin-bottom: 24px;
 }
 
-.card {
-	width: 350px;
+.button {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 }
 
-.card__content {
-	display: flex;
+.button.is-hidden {
+	display: none;
 }
 
-.card__image {
-	width: 200px;
+.button > .spinner.is-hidden {
+	display: none;
 }
 
-.card__name {
-	text-align: center;
-	font-size: 30px;
+/* Images list */
+.images-container {
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+	grid-gap: 20px;
+	padding: 0;
+	margin: 0;
+	list-style: none;
+	max-width: calc(100vw - 80px);
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 30px;
 }
 
-.card__info {
-	display: inline-block;
-	margin-right: 30px;
+.images-container li {
+	height: 400px;
+	overflow: hidden;
+	background-color: #ffc0cb;
+	border-radius: 5px;
 }
-.infoName {
-	font-weight: 800;
-}
-.infoContent {
-	font-weight: 400;
+
+.images-container img {
+	display: block;
+	width: 100%;
+	height: 200px;
+	object-fit: cover;
 }
