--- a/src/styles.css
+++ b/src/styles.css
@@ -70,6 +70,11 @@ img {
 	object-fit: cover;
 }
 
+.errorStyle {
+	display: flex;
+	justify-content: center;
+}
+
 /* styles for modalOpen via lightBox:*/
 /* #lightbox {
 	position: fixed;
