--- a/src/imagesTemplate.hbs
+++ b/src/imagesTemplate.hbs
@@ -1,9 +1,9 @@
 {{#each this}}
 <li>
     <div class="photo-card"">
-        <img src=" {{webformatURL}}" alt="{{tags}}" class="image-card" id="{{id}}" />
+        <img src=" {{webformatURL}}" alt="{{tags}}" class="image-card" data-source="{{largeImageURL}}"" />
 
-    <div class="stats">
+    <div class=" stats">
         <p class="stats-item">
             <i class="material-icons">thumb_up</i>
             {{likes}}
