--- a/src/imagesTemplate.hbs
+++ b/src/imagesTemplate.hbs
@@ -1,7 +1,7 @@
 {{#each this}}
 <li>
     <div class="photo-card"">
-        <img src=" {{webformatURL}}" alt="{{tags}}" class="image-card" data-source="{{largeImageURL}}"" />
+        <img data-lazy=" {{webformatURL}}" alt="{{tags}}" class="image-card" data-source="{{largeImageURL}}"" />
 
     <div class=" stats">
         <p class="stats-item">
