--- a/src/styles.css
+++ b/src/styles.css
@@ -1,78 +1,87 @@
 *,
 *::before,
 *::after {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html {
-	scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 body {
-	font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI',
-		Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-	line-height: 1.5;
-	color: #2a2a2a;
+  font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+  line-height: 1.5;
+  color: #2a2a2a;
 }
 
 img {
-	display: block;
-	max-width: 100%;
-	height: auto;
+  display: block;
+  max-width: 100%;
+  height: auto;
+  /* transform: translateX(50%);
+  opacity: 0;
+  transition: all 500ms; */
 }
 
+/* .fade {
+  transform: translateX(0);
+  opacity: 1;
+  transition: all 500ms;
+} */
+
 .search-form {
-	display: flex;
-	justify-content: center;
-	padding: 8px;
-	margin-bottom: 24px;
+  display: flex;
+  justify-content: center;
+  padding: 8px;
+  margin-bottom: 24px;
 }
 
 .button {
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .button.is-hidden {
-	display: none;
+  display: none;
 }
 
 .button > .spinner.is-hidden {
-	display: none;
+  display: none;
 }
 
 /* Images list */
 .images-container {
-	display: grid;
-	grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-	grid-gap: 20px;
-	padding: 0;
-	margin: 0;
-	list-style: none;
-	max-width: calc(100vw - 80px);
-	margin-left: auto;
-	margin-right: auto;
-	margin-bottom: 30px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-gap: 20px;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  max-width: calc(100vw - 80px);
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 30px;
 }
 
 .images-container li {
-	height: 400px;
-	overflow: hidden;
-	background-color: #ffc0cb;
-	border-radius: 5px;
+  height: 400px;
+  overflow: hidden;
+  background-color: #ffc0cb;
+  border-radius: 5px;
 }
 
 .images-container img {
-	display: block;
-	width: 100%;
-	height: 200px;
-	object-fit: cover;
+  display: block;
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
 }
 
 .errorStyle {
-	display: flex;
-	justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 /* styles for modalOpen via lightBox:*/
